--- a/src/components/openEntries.css
+++ b/src/components/openEntries.css
@@ -8,6 +8,7 @@
     border-radius: 8px; /* Rounded corners */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
     background-color: #f9f9f9; /* Light background color */
+    position: relative;
 }
 
 /* Title styling */
@@ -79,6 +80,15 @@ button {
     background-color: rgb(231, 68, 68);
     width: 4rem;
     height: 2rem;
-    position: relative;
-    left: 20rem;
+    position: absolute;
+top: 4rem;
+right: 1.5rem;
+}
+@media (max-width: 480px) {
+    .formContainer {
+        width: 95%; /* Increase width on smaller screens */
+        padding: 2rem 0rem; /* Reduce padding for smaller screens */
+    }
+    
+  
 }
